Fix broken link paths

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
    <img src="https://i.scdn.co/image/ab67616100005174192045794fb0f9205ba1d4bc" height="200" />
    <img src="https://c.saavncdn.com/artists/Aadiii_exe_001_20230622064721_500x500.jpg" height="200" />
    <hr>
-<a href="/ADNAN/qualification.html">Click Here For My Qualification</a>
+<a href="qualification.html">Click Here For My Qualification</a>
 <br>
-<a href="/ADNAN/experience.html">Click Here For My Experiences</a>
+<a href="experience.html">Click Here For My Experiences</a>
 </body>
 </html>
